--- a/src/components/booking/booking.css
+++ b/src/components/booking/booking.css
@@ -54,8 +54,8 @@
   
 }
 
-.booking .form .firstName, .secondName{
+/* .booking .form .firstName, .secondName{
   display: flex;
   flex-direction: column;
   width: 100%;
-}
+} */
