--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,3 +41,34 @@ button:hover {
   background-color: transparent;
   color: #351311;
 }
+.menu_icon {
+  color: #4b2e05;
+  cursor: pointer;
+  display: none;
+}
+@media (max-width: 992px) {
+  .header{
+    padding: 0 15px;
+  }
+  .menu_icon {
+    display: block;
+  }
+  .nav_links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    background: rgba(233, 228, 215, 0.945);
+    flex-direction: column;
+    align-items: center;
+    gap: 1.2rem;
+    padding: 1.5rem 0;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    transform: translateY(-200%);
+    transition: all 0.4s ease-in-out;
+  }
+
+  .nav_links.active {
+    transform: translateY(0);
+  }
+}
